[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cronometer-api-mcp"
version = "0.1.0"
description = "MCP server for Cronometer nutrition data using the mobile REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Randy" },
]
keywords = ["cronometer", "mcp", "nutrition", "health", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
cronometer-api-mcp = "cronometer_api_mcp.server:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cronometer_api_mcp"]
